# alton

./: .gitignore  .travis.yml  Dockerfile  Procfile  README.md  config.py  dev-requirements.txt  fig.yml  requirements.txt  run_alton.py  run_will.py  setup.cfg  tox.ini
alton/: ec2.py  gocd_api.py  pause_event.py  user.py
docker/: docker-compose.yml
docker/alton/: Dockerfile
plugins/: alot.py  deploy.py  hello.py  notify.py  release.py  show.py  user.py
plugins/tests/: test_show.py
templates/: qr_code.html
tests/: test_pause_event.py  test_show_plugin.py
