[metadata]
name = alton
description = edX chatbot - a Will bot

[files]
packages =
    alton
    alton.plugins

[extras]
test =
    ddt==1.0.1
    edx_lint
    freezegun
    moto==0.4.30
    mock==2.0.0
    pep8==1.7.0
    pylint
    pytest==3.0.5
    pytest-xdist==1.15.0
    pytest-pylint
    pytest-pep8
    responses==0.5.0
    requests_mock
dev =
    ipython
    tox
    tox-pyenv
